# interview-task

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: config.h  main.cpp
src/core/: app_state.h  app_window.cpp  app_window.h
src/data/: market_data_manager.cpp  market_data_manager.h
src/gui/: base_window.h  instruments_window.cpp  instruments_window.h  orderbook_cache.cpp  orderbook_cache.h  orderbook_window.cpp  orderbook_window.h
src/net/: okx_client.cpp  okx_client.h
